<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_teams">

    <fragment
        android:id="@+id/navigation_games"
        android:name="com.example.scorelive.ui.games.GamesFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/navigation_teams"
        android:name="com.example.scorelive.ui.teams.TeamsFragment"
        android:label="@string/title_teams"
        tools:layout="@layout/fragment_teams" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.scorelive.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />
</navigation>