<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:paddingTop="16dp"
    android:focusable="true">

    <TextView
        android:id="@+id/tvEventVersus_Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/value_event_versus" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/imgEventHomeTeam_Item"
            android:layout_width="@dimen/image_item_width"
            android:layout_height="@dimen/image_item_width"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@android:color/darker_gray"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/text_home_team" />

        <TextView
            android:id="@+id/tvEventHomeScore_Item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toEndOf="@+id/imgEventHomeTeam_Item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_dash" />

        <LinearLayout
            android:id="@+id/linearLayoutEvent_Item"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/imgEventHomeTeam_Item"
            app:layout_constraintEnd_toStartOf="@id/imgEventAwayTeam_Item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_item_width">


            <TextView
                android:id="@+id/tvEventTime_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/value_event_time"/>

            <TextView
                android:id="@+id/tvEventDate_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/value_event_date"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvEventAwayScore_Item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginRight="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/imgEventAwayTeam_Item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_dash" />

        <ImageView
            android:id="@+id/imgEventAwayTeam_Item"
            android:layout_width="@dimen/image_item_width"
            android:layout_height="@dimen/image_item_width"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            tools:src="@android:color/darker_gray"
            android:contentDescription="@string/text_away_team" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>