<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PremierLeague.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarEventDetails"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="noScroll|exitUntilCollapsed|snap"
            app:titleEnabled="false" >

            <ImageView
                android:id="@+id/imgHeaderEventDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@android:color/darker_gray"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/text_event" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:background="@android:color/black"
                android:fitsSystemWindows="true"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarEventDetails"
                android:contentDescription="@string/text_event"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/abc_vector_test"
                app:titleTextColor="@color/white"
                app:title=" "
                tools:title="@string/text_placeholder"
                android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
                app:popupTheme="@style/Theme.AppCompat.DayNight"/>

<!--            <com.google.android.material.tabs.TabLayout-->
<!--                android:id="@+id/tabsEventDetails"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="?attr/actionBarSize"-->
<!--                android:layout_gravity="bottom"-->
<!--                android:background="@android:color/transparent"-->
<!--                app:tabBackground="@android:color/transparent"-->
<!--                app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"-->
<!--                app:tabSelectedTextColor="?attr/colorAccent"-->
<!--                app:tabIndicatorColor="?attr/colorAccent"-->
<!--                app:tabTextColor="@color/white" />-->

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerEventDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEventFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:tint="@color/white"
        android:tint="@color/white"
        app:backgroundTint="@color/blue_grey"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:srcCompat="@drawable/ic_star_black_24dp"
        android:contentDescription="@string/title_favorites" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>